Hice correcion de ortografia y aplique altura y anchura en los videos

--- a/html/Ejercicio3.html
+++ b/html/Ejercicio3.html
@@ -22,8 +22,20 @@
     
     <li>Alta inteligencia estratégica</li>
     <li>Habilidad para manipular a otros con sus palabras</li>
-    <li>No posee fuerza sobrehumana como los asgardianos</li>
+    <li><del>No posee fuerza sobrehumana como los asgardianos</del></li>
     <li>Puede usar poderosos hechizos y encantamientos mágicos</li>
+
+    <h2>Loki en las películas de Marvel</h2>
+
+    <p>Loki ha aparecido como antagonista principal en varias peliculas de MCU:</p>
+
+    <li>Thor</li>
+    <li>The Avengers</li>
+    <li>Thor: The Dark World</li>
+    <li>Thor: Ragnarok</li>
+
+    <p>Loki: Encuentro muy entretenido que al intentar gobernar a los humanos, te enfrentes a ellos</p>
+    <p>Thor: No trato de gobernarlos. Quiero vivir entre ellos</p>
 </body>
 
 </html>
